--- a/acros.tex
+++ b/acros.tex
@@ -47,6 +47,7 @@
 \newacronym{DNP}{DNP}{delayed neutron precursor}
 \newacronym{DNS}{DNS}{direct numerical simulation}
 \newacronym{DOE}{DOE}{Department of Energy}
+\newacronym{DOF}{DOF}{degree of freedom}
 \newacronym{DMSR}{DMSR}{Denatured Molten Salt Reactor}
 \newacronym{DRACS}{DRACS}{Direct Reactor Auxiliary Cooling System}
 \newacronym{DRE}{DRE}{dynamic resource exchange}
