--- a/main.tex
+++ b/main.tex
@@ -159,10 +159,10 @@ nogroupskip=true]
 \input{msre}
 \glsresetall
 
-%\chapter{Proposed Work}
-%\label{chap:proposedwork}
-%\input{proposed-work}
-%\glsresetall
+\chapter{Demonstration of Time-Dependent Reactivity Initiated Transients}
+\label{chap:transient}
+\input{transient}
+\glsresetall
 
 \backmatter
 
