--- a/msre.tex
+++ b/msre.tex
@@ -1187,7 +1187,8 @@ geometry.
     \centering
     \includegraphics[width=\columnwidth]{rod-bead}
   \end{subfigure}
-  \caption{Cutaway view and dimensions of a control rod poison element.}
+  \caption{Cutaway view and dimensions of a control rod poison element. Retrieved from
+  \cite{tolson_msre_1967} and \cite{robertson_msre_1965}.}
   \label{fig:rod-bead}
 \end{figure}
 
