--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2569,6 +2569,7 @@ equivalent cross sections for a rodded region These cross sections used in a dif
 theory calcualtion yield the same rod efficiency and reaction rate distribution as
 the transport theory calculation for the explicit heterogeneous control rod The description
 of the method is complemented by sample problems (orig)},
+	institution = {Kernforschungsanlage Juelich G.m.b.H. Inst. fuer Reaktorentwicklung},
 	author = {Scherer, W. and Neef, H.J.},
 	year = {1976},
 	note = {Juel--1311
@@ -2592,6 +2593,7 @@ subsequently used in multidimensional diffusion type reactor codes for the repre
 of absorber regions The analysis of typical examples related to the modular pebble-bed
 HTR showed a good agreement of the results of both methods relative to each other
 and relative to pure transport calculations such as S-N and Monte-Carlo (orig)},
+	institution = {Kernforschungsanlage Juelich G.m.b.H. Inst. fuer Reaktorentwicklung},
 	author = {Fen, V. and Lebedev, M. and Sarytchev, V. and Scherer, W.},
 	year = {1992},
 	note = {Juel--2573
@@ -3065,6 +3067,7 @@ to an idealized heterogeneous BWR two-group problem defined by Henry and Worley 
 this problem equivalent group parameters in a two-group and a one-group representation
 are determined The numerical solution of the equivalence equations for this reactor
 problem reproduces the integral quantities within five digits},
+	institution = {Kraftwerk Union A.G., Erlangen},
 	author = {Koebke, K.},
 	year = {1980},
 	note = {IAEA-TECDOC--231
@@ -3134,6 +3137,7 @@ current (in one velocity theory); Section 2 is devoted to the extension of the S
 method to assembly problems Finally Section 3 presents the generalisation to general
 multigroup problems Numerical results are obtained for a PXR rod bundle assembly in
 Section 4},
+	institution = {CEA Centre d'Etudes Nucleaires de Saclay, 91 - Gif-sur-Yvette (France). Service d'Etudes des Reacteurs et de Mathematiques Appliquees},
 	author = {Kavenoky, Alain},
 	year = {1978},
 	note = {CEA-CONF--4492
@@ -3808,6 +3812,7 @@ INIS Reference Number: 8288836},
 	language = {en},
 	number = {INL/EXT--17-42103, 1466687},
 	urldate = {2024-06-10},
+	institution = {Idaho National Lab},
 	author = {Wang, Yaqi and Schunert, Sebastian and Laboure, Vincent},
 	month = apr,
 	year = {2018},
@@ -3931,6 +3936,7 @@ Additionally, MSR fuel cycle analysis capability has been implemented by conside
 The developed capabilities have been verified using the Molten Salt Fast Reactor (MSFR) numerical benchmarks and validated against the available measured data of the Molten Salt Reactor Experiment (MSRE). The verification and validation test results demonstrate that these capabilities can model the relevant physics of flowing fuel MSRs accurately and efficiently. The developed code can be used for steady state, transient, and fuel cycle analyses of thermal and fast spectrums MSRs designs.},
 	language = {en},
 	urldate = {2024-07-15},
+	school = {University of Michigan},
 	author = {Jaradat, Mustafa},
 	year = {2021},
 	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\KDVVEUAI\\Jaradat - 2021 - Development of Neutronics Analysis Capabilities fo.pdf:application/pdf},
@@ -4039,4 +4045,19 @@ NTRS Research Center: Langley Research Center (LaRC)},
 	note = {Publisher: Taylor \& Francis
 \_eprint: https://doi.org/10.1080/00411459708017924},
 	pages = {385--431},
+}
+
+@techreport{tolson_msre_1967,
+	title = {{MSRE} {CONTROL} {ELEMENTS}: {MANUFACTURE}, {INSPECTION}, {DRAWINGS}, {AND} {SPECIFICATIONS}.},
+	shorttitle = {{MSRE} {CONTROL} {ELEMENTS}},
+	url = {https://www.osti.gov/biblio/4314326},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {ORNL-4123},
+	urldate = {2024-11-07},
+	institution = {Oak Ridge National Lab. (ORNL), Oak Ridge, TN (United States)},
+	author = {Tolson, G. M. and Taboada, A.},
+	month = jan,
+	year = {1967},
+	doi = {10.2172/4314326},
 }
