Rod drop content

--- a/transient.tex
+++ b/transient.tex
@@ -15,9 +15,21 @@ experiments. Beyond time-dependent modeling, the simulations will also verify an
 compatibility between the existing neutronics/thermal-hydraulics coupling capabilities in Moltres
 and the newly-implemented hybrid method.
 
-Section \ref{sec:rod-drop} 
+Section \ref{sec:rod-drop} covers the model setup, numerical results, and discussion of the rod
+drop experiment. Section \ref{sec:reactivity-insertion} covers the model setup, numerical results,
+and discussion of the reactivity insertion experiment. Lastly, Section \ref{sec:transient-summary}
+summarizes the goals and outcomes in this chapter.
 
 \section{Rod Drop Experiment} \label{sec:rod-drop}
+
+\gls{MSRE} researchers conducted a series of rod drop experiments at three different $^{235}$U
+loadings \cite{prince_zero-power_1968}. These experimented were conducted from an initially critical
+and low power state with an initial neutron count rate of approximately 30,000 from neutron detectors
+placed near the reactor. A rapid-action camera photographed the integral count shown on the
+detectors about once every second starting from a few seconds before the rod drop to about thirty
+seconds after the rod drop. This work aims to replicate the integral count curve following a rod
+drop of Rod 1 with the $^{235}$U loading corresponding to "30 capsule additions" of highly-enriched
+$^{235}$U capsules.
 
 \subsection{Model Setup}
 
